# jit-semantic-search

./: .gitignore  README.md  REPORT_v0.md  pyproject.toml
evals/: benchmark.py  dataset.py  metrics.py  pgvector_benchmark.py  pgvector_results.json  results.json
src/jit_search/: __init__.py  __main__.py  cascade.py  cascade_v2.py  cli.py  core.py  lexical.py  neural.py  projection.py  reranker.py  rptree.py  server.py
